--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "nodemon --exec babel-node src/index.js"
+		"start": "dotenv -- nodemon --exec babel-node src/index.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -21,6 +21,7 @@
 		"apollo-server-express": "^2.4.8",
 		"express": "^4.16.4",
 		"graphql": "^14.2.1",
+		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.5.1"
 	}
 }
