--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	},
 	"dependencies": {
 		"apollo-server-express": "^2.4.8",
+		"bcrypt": "^3.0.6",
 		"express": "^4.16.4",
 		"graphql": "^14.2.1",
 		"jsonwebtoken": "^8.5.1",
